; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_set_last_error.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_set_last_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.script_ctx = type { i64* }

@.str = private unnamed_addr constant [6 x i8] c"Error\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.script_ctx*, i32, i8*)* @set_last_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_last_error(%struct.script_ctx* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.script_ctx*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.script_ctx* %0, %struct.script_ctx** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.script_ctx*, %struct.script_ctx** %4, align 8
  %8 = getelementptr inbounds %struct.script_ctx, %struct.script_ctx* %7, i32 0, i32 0
  %9 = load i64*, i64** %8, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 0
  store i64 0, i64* %10, align 8
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  br label %31

14:                                               ; preds = %3
  %15 = load i8*, i8** %6, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 0
  %20 = load i8, i8* %19, align 1
  %21 = icmp ne i8 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %17, %14
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  br label %23

23:                                               ; preds = %22, %17
  %24 = load %struct.script_ctx*, %struct.script_ctx** %4, align 8
  %25 = getelementptr inbounds %struct.script_ctx, %struct.script_ctx* %24, i32 0, i32 0
  %26 = load i64*, i64** %25, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = call i64* @talloc_strdup_append(i64* %26, i8* %27)
  %29 = load %struct.script_ctx*, %struct.script_ctx** %4, align 8
  %30 = getelementptr inbounds %struct.script_ctx, %struct.script_ctx* %29, i32 0, i32 0
  store i64* %28, i64** %30, align 8
  br label %31

31:                                               ; preds = %23, %13
  ret void
}

declare dso_local i64* @talloc_strdup_append(i64*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
